load-tests/route_guide_bidirectional_streaming/deployment/deployment-patch.yaml
apiVersion: "apps/v1"
kind: Deployment
metadata:
  name: no-name
spec:
  template:
    spec:
      containers:
      - name: "route-guide-bidirectional-streaming-deployment"
        imagePullPolicy: Always
